@@ -552,6 +552,9 @@ local process_migration = {
         hex_grid.update_all_trades()
     end,
     ["1.2.1"] = function()
+        item_values.reset_storage()
+        storage.item_values.values = data_item_values.values
+
         storage.initialization = storage.events
         storage.events = nil
 
