@@ -416,203 +416,204 @@ return {
             ["water-barrel"] = 284.3091291879071
         },
         fulgora = {
-            accumulator = 2193.5182389332267,
-            ["active-provider-chest"] = 6055.4320367594764,
-            ["advanced-circuit"] = 304.54570833336555,
-            ["arithmetic-combinator"] = 4243.6106138485402,
-            ["assembling-machine-1"] = 2630.067497272029,
-            ["assembling-machine-2"] = 8182.5873894130182,
-            ["assembling-machine-3"] = 63729.407699307587,
-            ["asteroid-collector"] = 95093.005672451589,
-            ["automation-science-pack"] = 107.06376251905742,
-            barrel = 282.12117814651924,
-            battery = 228.40928125080714,
-            ["battery-equipment"] = 6052.4143452361759,
-            ["battery-mk2-equipment"] = 148880.37217612428,
-            ["battery-mk3-equipment"] = 966475.82086438139,
-            beacon = 44718.326527561869,
-            ["belt-immunity-equipment"] = 6748.1109477098034,
-            ["big-electric-pole"] = 3502.8413104369201,
-            boiler = 2392.7002134945105,
-            ["buffer-chest"] = 6055.4320367594764,
-            ["bulk-inserter"] = 16671.699113431117,
-            ["burner-inserter"] = 110.72522452114772,
-            ["burner-mining-drill"] = 2939.7633204015601,
-            ["cannon-shell"] = 5830.2047758503795,
-            car = 12609.317145376026,
-            ["cargo-bay"] = 51520.094881030323,
-            ["cargo-landing-pad"] = 117180.81746528292,
-            ["cargo-wagon"] = 9127.2299186585315,
-            centrifuge = 124269.42495060449,
-            ["chemical-plant"] = 6860.2202144475314,
-            ["chemical-science-pack"] = 6319.6553413159545,
-            ["cluster-grenade"] = 31573.455867348235,
-            concrete = 152.27285416604863,
-            ["constant-combinator"] = 2646.964239256597,
-            ["construction-robot"] = 21285.06207683972,
-            ["copper-cable"] = 213.81513367155389,
-            ["copper-plate"] = 19.412390608770565,
-            crusher = 107994.15175922419,
-            ["decider-combinator"] = 4243.5554424956281,
-            ["defender-capsule"] = 5584.535389590671,
-            ["destroyer-capsule"] = 479800.24228415312,
-            ["discharge-defense-equipment"] = 2716673.161738419,
-            ["display-panel"] = 575.32121076879116,
-            ["distractor-capsule"] = 46738.747463241867,
-            ["efficiency-module"] = 6674.6017957341128,
-            ["efficiency-module-2"] = 88371.657827719348,
-            ["electric-engine-unit"] = 3174.5868848058658,
-            ["electric-furnace"] = 18532.85428641918,
-            ["electric-mining-drill"] = 2778.1326445544032,
-            electrolyte = 91.680331163679767,
-            ["electromagnetic-plant"] = 618687.26379745395,
-            ["electromagnetic-science-pack"] = 26515.563374706249,
-            ["electronic-circuit"] = 359.541702524416,
-            ["energy-shield-equipment"] = 6748.1109477118034,
-            ["energy-shield-mk2-equipment"] = 153823.65461583636,
-            ["engine-unit"] = 698.33119381995323,
-            ["exoskeleton-equipment"] = 215485.91528574019,
-            ["explosive-cannon-shell"] = 10515.493874956137,
-            ["explosive-rocket"] = 15093.809130776333,
-            explosives = 2358.4461386819553,
-            ["express-splitter"] = 34074.531435493394,
-            ["express-transport-belt"] = 1731.3480708722209,
-            ["express-underground-belt"] = 7021.1418279415511,
-            ["fast-inserter"] = 2522.9555156355541,
-            ["fast-splitter"] = 13425.741598398889,
-            ["fast-transport-belt"] = 420.06043966726946,
-            ["fast-underground-belt"] = 2055.8435546834157,
-            ["firearm-magazine"] = 151.44139754733143,
-            flamethrower = 2817.498191874191,
-            ["flamethrower-ammo"] = 3505.3492873970495,
-            ["flamethrower-turret"] = 30675.727840860131,
-            ["fluid-wagon"] = 13136.918870134523,
-            ["flying-robot-frame"] = 13661.06254213956,
-            gate = 8669.2727609735666,
-            grenade = 430.86823563063263,
-            ["gun-turret"] = 2450.1019636015344,
-            ["hazard-concrete"] = 194.36535372954705,
-            ["heat-exchanger"] = 7981.8462294593683,
-            ["heat-pipe"] = 3833.3748799486175,
-            ["heavy-armor"] = 22439.267589932304,
+            accumulator = 2815.9345804619929,
+            ["active-provider-chest"] = 4758.7141278996869,
+            ["advanced-circuit"] = 235.38445656971055,
+            ["arithmetic-combinator"] = 1892.0922127713179,
+            ["assembling-machine-1"] = 4018.292210608769,
+            ["assembling-machine-2"] = 9463.2103836080205,
+            ["assembling-machine-3"] = 49447.867103769335,
+            ["asteroid-collector"] = 110028.88771976765,
+            ["automation-science-pack"] = 366.95594570375329,
+            barrel = 282.12117814645319,
+            battery = 228.40928125031581,
+            ["battery-equipment"] = 6052.4143452374765,
+            ["battery-mk2-equipment"] = 148880.37217611636,
+            ["battery-mk3-equipment"] = 957936.75793945778,
+            beacon = 27155.45607099231,
+            ["belt-immunity-equipment"] = 6116.1500097233456,
+            ["big-electric-pole"] = 4413.4662843094229,
+            boiler = 3687.7342950698335,
+            ["buffer-chest"] = 4758.7141278996869,
+            ["bulk-inserter"] = 9205.4125741773514,
+            ["burner-inserter"] = 362.80386893380546,
+            ["burner-mining-drill"] = 3827.8050622208248,
+            ["cannon-shell"] = 5043.1961736516887,
+            car = 31117.561374167915,
+            ["cargo-bay"] = 51520.094881033794,
+            ["cargo-landing-pad"] = 117180.81746524488,
+            ["cargo-wagon"] = 14906.548531901359,
+            centrifuge = 110202.71795438044,
+            ["chemical-plant"] = 6692.8001903096128,
+            ["chemical-science-pack"] = 7921.6131623156261,
+            ["cluster-grenade"] = 48557.4083024059,
+            concrete = 152.27285416685771,
+            ["constant-combinator"] = 1338.2174576427892,
+            ["construction-robot"] = 21408.579050276701,
+            ["copper-cable"] = 130.91724356432562,
+            ["copper-plate"] = 177.42557388737313,
+            crusher = 126664.64932216315,
+            ["decider-combinator"] = 1892.0921498320627,
+            ["defender-capsule"] = 16027.089828887016,
+            ["destroyer-capsule"] = 905879.27437968773,
+            ["discharge-defense-equipment"] = 2701736.980055741,
+            ["display-panel"] = 479.80706913298786,
+            ["distractor-capsule"] = 130292.75340523558,
+            ["efficiency-module"] = 3619.5337399028294,
+            ["efficiency-module-2"] = 51971.954379947121,
+            ["electric-engine-unit"] = 4076.6612023514958,
+            ["electric-furnace"] = 13320.051286602817,
+            ["electric-mining-drill"] = 4513.748752101289,
+            electrolyte = 91.02273619053031,
+            ["electromagnetic-plant"] = 632096.69532365433,
+            ["electromagnetic-science-pack"] = 25483.958787230808,
+            ["electronic-circuit"] = 124.7233953368516,
+            ["energy-shield-equipment"] = 6116.1500097225808,
+            ["energy-shield-mk2-equipment"] = 140746.01295529059,
+            ["engine-unit"] = 1603.5372014014831,
+            ["exoskeleton-equipment"] = 271517.24632615608,
+            ["explosive-cannon-shell"] = 8970.6696592564258,
+            ["explosive-rocket"] = 13639.989051052422,
+            explosives = 1976.9825257246475,
+            ["express-splitter"] = 25855.388889258786,
+            ["express-transport-belt"] = 2044.0802959748055,
+            ["express-underground-belt"] = 11685.930850330818,
+            ["fast-inserter"] = 2125.6635873175287,
+            ["fast-splitter"] = 9882.8049148017908,
+            ["fast-transport-belt"] = 606.63327918262553,
+            ["fast-underground-belt"] = 4739.4175286910622,
+            ["firearm-magazine"] = 1037.1032892818262,
+            flamethrower = 2817.4981918758817,
+            ["flamethrower-ammo"] = 3505.3492873961441,
+            ["flamethrower-turret"] = 49294.724735391719,
+            ["fluid-wagon"] = 26761.904686734022,
+            ["flying-robot-frame"] = 14213.129591144218,
+            gate = 5241.5151592754401,
+            grenade = 1924.6657702653308,
+            ["gun-turret"] = 12355.222892656338,
+            ["hazard-concrete"] = 194.36535373358078,
+            ["heat-exchanger"] = 39995.249846457147,
+            ["heat-pipe"] = 8569.1879911054075,
+            ["heavy-armor"] = 50161.100296996548,
             ["heavy-oil"] = 6,
-            ["heavy-oil-barrel"] = 855.31646827541101,
-            ["holmium-ore"] = 913.637125009888,
-            ["holmium-plate"] = 1170.1407500798425,
-            ["holmium-solution"] = 44.998058012554949,
-            ice = 182.72742500988824,
-            inserter = 728.01894392427232,
-            ["iron-chest"] = 299.18910247109284,
-            ["iron-gear-wheel"] = 45.681856250023515,
-            ["iron-plate"] = 29.118585913187431,
-            ["iron-stick"] = 18.699318904444961,
-            lab = 7428.6895926168636,
-            ["land-mine"] = 2028.7469454010982,
-            landfill = 14667.944396555942,
-            ["laser-turret"] = 35435.133860114736,
-            ["light-armor"] = 1588.2878279293293,
-            ["light-oil"] = 30.516596922628807,
-            ["light-oil-barrel"] = 2656.4405194155206,
-            ["lightning-collector"] = 159127.56694018294,
-            ["lightning-rod"] = 12673.807780570933,
-            locomotive = 43835.175564630881,
-            ["logistic-robot"] = 21123.437905116829,
-            ["logistic-science-pack"] = 1317.0888627457914,
-            ["long-handed-inserter"] = 1345.6768593859738,
-            ["low-density-structure"] = 913.63712500039526,
-            lubricant = 7.8012750010986966,
-            ["lubricant-barrel"] = 987.64803676126485,
-            ["mech-armor"] = 3239760.5324451067,
-            ["medium-electric-pole"] = 1569.5697056414383,
-            ["military-science-pack"] = 9312.8154437470403,
-            ["modular-armor"] = 40175.675263301229,
-            ["night-vision-equipment"] = 6748.1109477098034,
-            ["nuclear-reactor"] = 769049.14426286973,
-            ["offshore-pump"] = 301.3242252659947,
-            ["oil-refinery"] = 34164.664975392108,
-            ["passive-provider-chest"] = 6055.4320367594764,
-            ["personal-laser-defense-equipment"] = 394881.85909707885,
-            ["personal-roboport-equipment"] = 45048.03163899928,
-            ["personal-roboport-mk2-equipment"] = 737721.29499532736,
-            ["petroleum-gas"] = 97.622737283151224,
-            ["petroleum-gas-barrel"] = 7586.4266742905211,
-            ["piercing-rounds-magazine"] = 531.82247077786405,
-            ["piercing-shotgun-shell"] = 1661.032884504453,
-            pipe = 37.398637808792387,
-            ["pipe-to-ground"] = 384.56012982000505,
-            ["plastic-bar"] = 71.178765565588535,
-            ["poison-capsule"] = 3634.5981311358842,
-            ["power-armor"] = 224575.28729322369,
-            ["power-armor-mk2"] = 1456283.1236313116,
-            ["power-switch"] = 3361.3866946820476,
-            ["processing-unit"] = 456.81856249994138,
-            ["production-science-pack"] = 31032.720924485344,
-            ["productivity-module"] = 6674.6017957341128,
-            ["productivity-module-2"] = 88371.657827719348,
-            ["programmable-speaker"] = 5182.4575055455171,
-            pump = 1656.0731129350929,
-            pumpjack = 7724.3092779675708,
-            ["quality-module"] = 6674.7728822108929,
-            ["quality-module-2"] = 88355.285438897161,
-            ["quality-module-3"] = 1329256.9197200693,
-            radar = 3884.214609713591,
-            rail = 388.9518951507676,
-            ["rail-chain-signal"] = 747.73526981941222,
-            ["rail-ramp"] = 204880.36748057872,
-            ["rail-signal"] = 747.73526981941222,
-            ["rail-support"] = 37834.983382206468,
-            recycler = 23759.194411967856,
-            ["refined-concrete"] = 1169.4810257080758,
-            ["refined-hazard-concrete"] = 1492.7584728655147,
-            ["repair-pack"] = 1199.6816737992376,
-            ["requester-chest"] = 6055.4320367594764,
-            roboport = 47537.557699231402,
-            rocket = 3886.5100999597739,
-            ["rocket-fuel"] = 3237.2299332132784,
-            ["rocket-launcher"] = 4494.0300755078679,
-            ["rocket-silo"] = 2413235.5980077693,
+            ["heavy-oil-barrel"] = 855.31646826743201,
+            ["holmium-ore"] = 913.63712500386919,
+            ["holmium-plate"] = 1156.3682631569327,
+            ["holmium-solution"] = 44.468433550444416,
+            ice = 182.72742500386937,
+            inserter = 619.88248594311244,
+            ["iron-chest"] = 2048.9113259241049,
+            ["iron-gear-wheel"] = 45.681856250009197,
+            ["iron-ore"] = 676.05340428566649,
+            ["iron-plate"] = 199.41035307796767,
+            ["iron-stick"] = 128.0569581423803,
+            lab = 4223.4173131220778,
+            ["land-mine"] = 1715.0408066943655,
+            landfill = 14667.944396565876,
+            ["laser-turret"] = 23777.104006643272,
+            ["light-armor"] = 10876.933453946684,
+            ["light-oil"] = 26.587746365702635,
+            ["light-oil-barrel"] = 2367.8055488728719,
+            ["lightning-collector"] = 141139.47149072919,
+            ["lightning-rod"] = 8993.5979241696532,
+            locomotive = 72527.655068823791,
+            ["logistic-robot"] = 21736.205207231316,
+            ["logistic-science-pack"] = 1347.1993919288066,
+            ["long-handed-inserter"] = 1449.8651407426503,
+            ["low-density-structure"] = 913.63712500015458,
+            lubricant = 7.8012750004299329,
+            ["lubricant-barrel"] = 987.64803676950498,
+            ["mech-armor"] = 3029787.1392001384,
+            ["medium-electric-pole"] = 2024.8822066365353,
+            ["military-science-pack"] = 9654.3712838711763,
+            ["modular-armor"] = 36004.733072570118,
+            ["night-vision-equipment"] = 6116.1500097233456,
+            ["nuclear-reactor"] = 867621.46703809174,
+            ["offshore-pump"] = 1272.5998644746735,
+            ["oil-refinery"] = 27757.859778248956,
+            ["passive-provider-chest"] = 4758.7141278996869,
+            ["personal-laser-defense-equipment"] = 274378.47858109209,
+            ["personal-roboport-equipment"] = 43449.54220761561,
+            ["personal-roboport-mk2-equipment"] = 727968.15176254674,
+            ["petroleum-gas"] = 82.682693716038898,
+            ["petroleum-gas-barrel"] = 6488.8489035172615,
+            ["piercing-rounds-magazine"] = 2518.7963987754729,
+            ["piercing-shotgun-shell"] = 7330.7644512752404,
+            pipe = 256.1137768844477,
+            ["pipe-to-ground"] = 2633.5493839358255,
+            ["plastic-bar"] = 63.831290307121499,
+            ["poison-capsule"] = 2235.148778677602,
+            ["power-armor"] = 269395.51386976376,
+            ["power-armor-mk2"] = 1154929.9025238222,
+            ["power-switch"] = 3304.6080175523598,
+            ["processing-unit"] = 456.81856249997861,
+            ["production-science-pack"] = 26388.949519739086,
+            ["productivity-module"] = 3619.5337399028294,
+            ["productivity-module-2"] = 51971.954379947121,
+            ["programmable-speaker"] = 4395.3234346814006,
+            pump = 3609.7570329028854,
+            pumpjack = 9831.662658794774,
+            ["quality-module"] = 3619.5339102612065,
+            ["quality-module-2"] = 51971.939132984502,
+            ["quality-module-3"] = 935772.10164196894,
+            radar = 4770.6645082645637,
+            rail = 480.60418902553022,
+            ["rail-chain-signal"] = 1660.5355640519604,
+            ["rail-ramp"] = 232484.97181277117,
+            ["rail-signal"] = 1660.5355640519604,
+            ["rail-support"] = 42493.535636486165,
+            recycler = 23759.194411957887,
+            ["refined-concrete"] = 1326.8353380410103,
+            ["refined-hazard-concrete"] = 1693.6099390213292,
+            ["repair-pack"] = 504.49326463170297,
+            ["requester-chest"] = 4758.7141278996869,
+            roboport = 41741.174801815134,
+            rocket = 3820.7666474159546,
+            ["rocket-fuel"] = 3158.2502149187967,
+            ["rocket-launcher"] = 3826.4355506211459,
+            ["rocket-silo"] = 2618036.8289358341,
             scrap = 86,
-            ["selector-combinator"] = 32308.756027046602,
-            ["shotgun-shell"] = 152.54741850177049,
-            ["slowdown-capsule"] = 2389.9600494596075,
-            ["small-lamp"] = 1726.6553082100409,
-            ["solar-panel"] = 13604.361502927093,
-            ["solar-panel-equipment"] = 31656.267680904937,
-            ["solid-fuel"] = 130.51958929560251,
-            ["space-platform-foundation"] = 15745.592211329631,
-            ["space-platform-starter-pack"] = 3008689.1448057946,
-            ["speed-module"] = 6674.359486267932,
-            ["speed-module-2"] = 88368.809963531312,
-            splitter = 3672.7980175040357,
-            ["steam-engine"] = 1414.093867408875,
-            ["steam-turbine"] = 7123.4285702027146,
-            ["steel-chest"] = 2229.4454077914843,
-            ["steel-furnace"] = 11882.000714157737,
-            ["steel-plate"] = 216.98082286275479,
-            stone = 228.40928125080714,
-            ["stone-brick"] = 625.83229425320258,
-            ["stone-furnace"] = 1466.7944396554933,
-            ["stone-wall"] = 4018.9580928838272,
-            ["storage-chest"] = 6055.4320367594764,
-            ["storage-tank"] = 2620.374062271379,
-            ["submachine-gun"] = 1748.759229093665,
-            substation = 8339.7806003041933,
-            sulfur = 2461.4124635921817,
-            ["sulfuric-acid"] = 458.97763725342742,
-            ["sulfuric-acid-barrel"] = 34133.545077886192,
-            supercapacitor = 11601.143167212769,
-            superconductor = 979.95721245206823,
-            tank = 76811.370277257301,
-            ["tesla-ammo"] = 24289.319978968302,
-            ["tesla-turret"] = 433779.30841840868,
-            teslagun = 70764.505799441002,
-            thruster = 46789.679304996367,
-            ["train-stop"] = 5121.2143641878783,
-            ["transport-belt"] = 55.362612261497873,
-            ["underground-belt"] = 425.58739111276685,
-            ["utility-science-pack"] = 14571.753479214074,
-            water = 11.879224103688784,
-            ["water-barrel"] = 1287.2366066696763
+            ["selector-combinator"] = 14700.949838743163,
+            ["shotgun-shell"] = 1184.5082635130625,
+            ["slowdown-capsule"] = 1456.9891904404419,
+            ["small-lamp"] = 1201.6389507548079,
+            ["solar-panel"] = 7952.3637107035302,
+            ["solar-panel-equipment"] = 19675.691633590934,
+            ["solid-fuel"] = 130.51958928958365,
+            ["space-platform-foundation"] = 12715.674322039198,
+            ["space-platform-starter-pack"] = 2603202.2839599904,
+            ["speed-module"] = 3619.5335012326536,
+            ["speed-module-2"] = 51971.951611758246,
+            splitter = 3981.3621361821106,
+            ["steam-engine"] = 6101.5579329955854,
+            ["steam-turbine"] = 28968.715531592497,
+            ["steel-chest"] = 2229.4454077912792,
+            ["steel-furnace"] = 8026.5734205486533,
+            ["steel-plate"] = 216.98082286274129,
+            stone = 228.40928125031581,
+            ["stone-brick"] = 380.52148754713369,
+            ["stone-furnace"] = 1466.7944396565481,
+            ["stone-wall"] = 2443.6257539523272,
+            ["storage-chest"] = 4758.7141278996869,
+            ["storage-tank"] = 7973.1529605145024,
+            ["submachine-gun"] = 6907.6767448379851,
+            substation = 6926.4247587006748,
+            sulfur = 2068.0568318200121,
+            ["sulfuric-acid"] = 116.71311653210468,
+            ["sulfuric-acid-barrel"] = 8988.9109300572727,
+            supercapacitor = 10335.875881406791,
+            superconductor = 1061.254715567231,
+            tank = 135626.75617980899,
+            ["tesla-ammo"] = 21844.084621483009,
+            ["tesla-turret"] = 430027.29940178146,
+            teslagun = 71603.786872319528,
+            thruster = 56124.124469134731,
+            ["train-stop"] = 6064.4518081542265,
+            ["transport-belt"] = 181.40192401697533,
+            ["underground-belt"] = 2173.7306207673928,
+            ["utility-science-pack"] = 15036.468978026556,
+            water = 9.3198790733478418,
+            ["water-barrel"] = 1099.2130443254739
         },
         gleba = {
             accumulator = 77024.804386701362,
